--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
-venv/
-.venv/
-ENV/
 build/
 develop-eggs/
 dist/
@@ -20,19 +16,17 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
-# Environment variables
-.env
-.env.local
-.env.*.local
+# Virtual Environment
+.venv/
+venv/
+ENV/
+env/
 
-# IDEs
+# IDE
 .vscode/
 .idea/
 *.swp
@@ -44,13 +38,51 @@ MANIFEST
 .pytest_cache/
 .coverage
 htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Linting
+.ruff_cache/
+
+# Jupyter
+.ipynb_checkpoints
+*.ipynb
+
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # Database
 *.db
 *.sqlite
+*.sqlite3
 
-# IDE specific
-.python-version
+# Logs
+*.log
+logs/
 
-# uv package manager
-uv.lock
+# Docker
+docker-compose.override.yml
+
+# Alembic
+# Keep alembic/ but ignore generated files if needed
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Backup files
+*.bak
+*.tmp
+
+# Documentation builds
+docs/_build/
+site/
