--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.1",
     "fastapi>=0.128.0",
+    "loguru>=0.7.3",
     "psycopg2-binary>=2.9.11",
+    "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.45",
     "uvicorn>=0.40.0",
 ]
