🚑 fix: (keycloak) update env var to new compose layout

--- a/docker/keycloak/.env.example
+++ b/docker/keycloak/.env.example
@@ -23,7 +23,7 @@ KC_DB_USERNAME=${POSTGRES_USER}
 KC_DB_PASSWORD=${POSTGRES_PASSWORD}
 
 # Hostname configuration (adjust for your domain)
-KC_HOSTNAME=auth.libresoftware.cloud
+KC_HOSTNAME=auth.devinci-fablab.fr
 KC_HOSTNAME_STRICT=true
 # Enable HTTP since Traefik handles HTTPS
 KC_HTTP_ENABLED=true
@@ -35,6 +35,9 @@ KC_PROXY_HEADERS=xforwarded
 KC_LOG_LEVEL=info
 KC_METRICS_ENABLED=true
 KC_HEALTH_ENABLED=true
+
+# Single instance
+KC_CACHE=local
 
 # Admin credentials (CHANGE THESE IN PRODUCTION!)
 KC_BOOTSTRAP_ADMIN_USERNAME=admin
