--- a/docker/keycloak/compose.yml
+++ b/docker/keycloak/compose.yml
@@ -24,8 +24,6 @@ services:
     depends_on:
       keycloakdb:
         condition: service_healthy
-    expose:
-      - 8080
     healthcheck:
       test:
         - CMD-SHELL
@@ -51,8 +49,23 @@ services:
         reservations:
           memory: 512M
           cpus: '0.5'
+    expose:
+      - 8080
     networks:
       - keycloak-internal
+      - traefik-network      
+    labels:
+      traefik.enable: true
+      traefik.docker.network: traefik-network
+      traefik.http.routers.keycloak.rule: Host(`${KC_HOSTNAME}`)
+      traefik.http.routers.keycloak.entrypoints: websecure
+      traefik.http.routers.keycloak.tls.certresolver: myresolver
+      traefik.http.routers.keycloak.service: keycloak
+      traefik.http.routers.keycloak-http.rule: Host(`${KC_HOSTNAME}`)
+      traefik.http.routers.keycloak-http.entrypoints: web
+      traefik.http.routers.keycloak-http.middlewares: redirect-to-https
+      traefik.http.middlewares.redirect-to-https.redirectscheme.scheme: https
+      traefik.http.services.keycloak.loadbalancer.server.port: 8080
 
   keycloakdb:
     image: postgres:15
@@ -88,4 +101,6 @@ services:
 networks:
   keycloak-internal:
     driver: bridge
+  traefik-network:
+    external: true
 
